# sizesquirrel-recommender

./: .gitignore  README.md  _draft.py  config.py  datasets.py  pipelines.py  pyproject.toml  query.py  size_manager.py  torch_models.py  torch_utils.py  trainer.py
data/: query_draft.sql
data/sizing_systems/la sportiva/: tc pro.csv  tc pro_2023.csv
