[tool.poetry]
name = "sizesquirrel-recommender"
version = "0.1.0"
description = ""
authors = ["Jonathan Saragosti <saragostij+github@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
tensorflow-macos = "^2.5"
scikit-learn = "^1.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
ipython = "^8.9.0"
ipykernel = "^6.21.1"
black = "^23.1.0"
llvmlite = "^0.39.1"
scikit-lego = "^0.6.14"
keras-tuner = "1.1.3"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
jupyter_client = "8.0.2"
jupyter-console = "6.4.4"
jupyter_core = "5.2.0"
jupyter-events = "0.5.0"
jupyter_server = "2.2.1"
jupyter_server_terminals = "0.4.4"
jupyterlab = "3.5.3"
jupyterlab-pygments = "0.2.2"
jupyterlab_server = "2.19.0"
jupyterlab-widgets = "3.0.5"
seaborn = "^0.12.2"
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
